--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+   <div class="container">
+        <div class="left"><img src="./back.png" alt=""></div>
+        <div class="right"></div>
+
+       
+   </div>
 </body>
 </html>
