--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 </div>
                 <div>
                     <label for="pass">Password</label>
-                    <input id="pass" type="text">
+                    <input id="pass" type="password">
                 </div>
                 <div>
                     <label for="repass">Repeat password</label>
-                    <input id="repass" type="text">
+                    <input id="repass" type="password">
                 </div>
                 <div>
                     <div>Get started</div>
