--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <form>
                 <div>
                     <label for="username">Username</label>
-                    <input id="username" type="text">
+                    <input id="username" type="text" placeholder="Username"
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input id="email" type="text">
+                    <input id="email" type="text" placeholder="Email">
                 </div>
                 <div>
                     <label for="pass">Password</label>
-                    <input id="pass" type="text">
+                    <input id="pass" type="password" placeholder="Password">
                 </div>
                 <div>
                     <label for="repass">Repeat password</label>
-                    <input id="repass" type="text">
+                    <input id="repass" type="password" placeholder="Repeat password">
                 </div>
                 <div>
                     <div>Get started</div>
