css-styles-written

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </footer>
         </div>
         <div class="right">
-            <div>x</div>
+            <div class="x">x</div>
             <form>
                 <div>
                     <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Username"
+                    <input id="username" type="text" placeholder="Username">
                 </div>
                 <div>
                     <label for="email">Email</label>
@@ -36,7 +36,7 @@
                     <input id="repass" type="password" placeholder="Repeat password">
                 </div>
                 <div>
-                    <div>Get started</div>
+                    <div class="start">Get started</div>
                     <span>or</span>
                     <a href="#">Sign in</a>
                 </div>
