--- a/index.html
+++ b/index.html
@@ -13,29 +13,31 @@
             <footer>
                 <a href="#">Privacy policy</a>
                 <span>&amp;</span>
-                <a href="#">terms of service</a>
+                <a class="terms" href="#">terms of service</a>
             </footer>
         </div>
         <div class="right">
-            <div class="x">x</div>
+            <div class="exit">x
+
+            </div>
             <form>
                 <div>
                     <label for="username">Username</label>
-                    <input id="username" type="text" placeholder="Username">
+                    <input id="username" type="text" placeholder="Username" size="35">
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input id="email" type="text" placeholder="Email">
+                    <input id="email" type="text" placeholder="Email" size="35">
                 </div>
                 <div>
                     <label for="pass">Password</label>
-                    <input id="pass" type="password" placeholder="Password">
+                    <input id="pass" type="password" placeholder="Password" size="35">
                 </div>
                 <div>
                     <label for="repass">Repeat password</label>
-                    <input id="repass" type="password" placeholder="Repeat password">
+                    <input id="repass" type="password" placeholder="Repeat password" size="35">
                 </div>
-                <div>
+                <div class="bottom">
                     <div class="start">Get started</div>
                     <span>or</span>
                     <a href="#">Sign in</a>
