--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- components -->
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/button.css">
     <!-- custom -->
@@ -17,7 +18,7 @@
             <footer>
                 <a href="#">Privacy policy</a>
                 <span>&amp;</span>
-                <a class="terms" href="#">terms of service</a>
+                <a  href="#">terms of service</a>
             </footer>
         </div>
         <div class="right">
@@ -25,24 +26,24 @@
 
             </div>
             <form>
-                <div>
+                <div class="form-row">
                     <label for="username">Username</label>
                     <input id="username" type="text" placeholder="Username" size="35">
                 </div>
-                <div>
+                <div class="form-row">
                     <label for="email">Email</label>
                     <input id="email" type="text" placeholder="Email" size="35">
                 </div>
-                <div>
+                <div class="form-row">
                     <label for="pass">Password</label>
                     <input id="pass" type="password" placeholder="Password" size="35">
                 </div>
-                <div>
+                <div class="form-row">
                     <label for="repass">Repeat password</label>
                     <input id="repass" type="password" placeholder="Repeat password" size="35">
-                </div>
-                <div class="bottom">
-                    <div class="start">Get started</div>
+                </div class="form-row">
+                <div class="form-row">
+                    <div class="btn" >Get started</div>
                     <span>or</span>
                     <a href="#">Sign in</a>
                 </div>
