--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- components -->
+    <!-- reset -->
     <link rel="stylesheet" href="./css/reset.css">
+    <!-- components -->
     <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/button.css">
     <!-- custom -->
@@ -31,8 +32,8 @@
                     <input id="username" type="text" placeholder="Username" size="35">
                 </div>
                 <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" type="text" placeholder="Email" size="35">
+                    <label for="email">E-Mail</label>
+                    <input id="email" type="text" placeholder="E-Mail" size="35">
                 </div>
                 <div class="form-row">
                     <label for="pass">Password</label>
