--- a/login/index.html
+++ b/login/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign in</title>
     <!-- reset -->
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <!-- components -->
-    <link rel="stylesheet" href="./css/form.css">
-    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/button.css">
     <!-- custom -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <div class="background"></div>
     <main class="container">
         <div class="left">
-            <h1>Sign up</h1>
+            <h1>Sign in</h1>
             <footer>
                 <a href="#">Privacy policy</a>
                 <span>&amp;</span>
@@ -32,22 +32,15 @@
                     <label for="username">Username</label>
                     <input id="username" type="text" placeholder="Username" size="35">
                 </div>
-                <div class="form-row">
-                    <label for="email">E-Mail</label>
-                    <input id="email" type="text" placeholder="E-Mail" size="35">
-                </div>
+                
                 <div class="form-row">
                     <label for="pass">Password</label>
                     <input id="pass" type="password" placeholder="Password" size="35">
                 </div>
                 <div class="form-row">
-                    <label for="repass">Repeat password</label>
-                    <input id="repass" type="password" placeholder="Repeat password" size="35">
-                </div class="form-row">
-                <div class="form-row">
-                    <div class="btn" >Get started</div>
+                    <div class="btn" >Log in</div>
                     <span>or</span>
-                    <a href="./login/">Sign in</a>
+                    <a href="../forgot-[assword/">Forgot password</a>
                 </div>
             </form>
         </div>
